# tree-api-assignment

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: crud.py  database.py  main.py  models.py  schemas.py
app/routers/: tree.py
tests/: test_tree.py
