[tool.poetry]
name = "tree-api"
version = "0.1.0"
description = "Production-ready FastAPI service for managing tree data structures"
authors = ["Nishitha Narreddi"]
readme = "README.md"
packages = [{ include = "app" }]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.25"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
